@@ -1,6 +1,5 @@
 enqueued:	0	wl : 0
 	0	wl : 0
 enqueued:	0	p.f : 1
-Warning: node p.f is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
 	0	p.f : 1
 event queue:
