@@ -1,0 +1,6 @@
+enqueued:	0	wl : 0
+	0	wl : 0
+enqueued:	0	p.f : 1
+Warning: node p.t is floating without pending feedback.  (weak-rules off)
+	0	p.f : 1
+event queue:
