@@ -25,7 +25,7 @@ invariant-unknown policy: warn
 assert-fail (bool) policy: fatal
 channel-expect-fail policy: fatal
 exclusion-fail policy: fatal
-keeper-check policy: warn
+keeper-check policy: ignore
 timing mode: 1
 dump flags: {
 hide definition owner
