@@ -1,0 +1,33 @@
+unstable-dequeue 
+pulling both rails down simultaneously 
+WARNING: unstable `f'-
+>> cause: `t' (val: 0)
+Warning: node f is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	0	t : 0
+instability? 
+t : 0
+f : X
+	0	t : X
+pulling one down first (slight time separation) 
+Warning: node f is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	0	t : 0
+Warning: node t is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	5	f : 0
+	5	t : X
+	5	f : X
+pulling one up 
+	5	t : 1
+Warning: node t is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	15	f : 0	[by t:=1]
+Warning: node f is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	15	t : 0
+	15	t : X
+	15	f : X
+glitching one up 
+	15	t : 1
+expect usual instability 
+WARNING: unstable `f'-
+rule: [after 10]	t:0 -> f-:X
+>> cause: `t' (val: 0)
+Warning: node f is floating without pending feedback.  (fast-weak-keepers disabled) (weak-rules off)
+	20	t : 0
